--- a/index.html
+++ b/index.html
@@ -7,34 +7,70 @@
   <!--meta tag for viewport-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!--link for favicon-->
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="favicon.ico">
   <!--link for font awesome icon-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   <!--link for default css stylesheet-->
   <link rel="stylesheet" media="screen" href="assets/css/style.css">
+  <!--link for google font-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 
 <body>
   <!--container start-->
   <div class="container">
-    <!--header section start-->
-    <header>
-
-    </header>
-    <!--header section start-->
     <!--main section start-->
     <main>
-
+      <!--delivery section start here-->
+      <section class="delivery">
+        <div class="wrapper">
+          <h1>Reliable, efficient delivery <span class="bold">Powered by Technology</span></h1>
+          <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project
+            is successful</p>
+          <!--cards list start here-->
+          <ul>
+            <li>
+              <div class="card supervisor">
+                <h2>Supervisor</h2>
+                <p>Monitors activity to identify project roadblocks</p>
+                <figure>
+                  <img src="assets/images/icon-supervisor.svg" alt="Magnifying glass with eye">
+                </figure>
+              </div>
+            </li>
+            <li>
+              <div class="card team-builder">
+                <h2>Team Builder</h2>
+                <p>Scans our talent network to create the optimal team for your project</p>
+                <figure>
+                  <img src="assets/images/icon-team-builder.svg" alt="Home in front of web">
+                </figure>
+              </div>
+              <div class="card karma">
+                <h2>Karma</h2>
+                <p>Regularly evaluates our talent to ensure quality</p>
+                <figure>
+                  <img src="assets/images/icon-karma.svg" alt="Light bulb with cog">
+                </figure>
+              </div>
+            </li>
+            <li>
+              <div class="card calculator">
+                <h2>Calculator</h2>
+                <p>Uses data from past projects to provide better delivery estimates</p>
+                <figure>
+                  <img src="assets/images/icon-calculator.svg" alt="Desktop Image">
+                </figure>
+              </div>
+            </li>
+          </ul>
+          <!--cards list end here-->
+        </div>
+      </section>
+      <!--delivery section end here-->
     </main>
     <!--main section end-->
-
-    <!--footer section start-->
-    <footer>
-
-    </footer>
-    <!--footer section end-->
-
   </div>
   <!--container end-->
   <script defer src="assets/js/script.js"></script>
